// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton Tests Snapshot Tests renders correctly 1`] = `
<label
  className="monday-style-radio-button-component dummy-class-name"
>
  <span
    className="monday-style-radio-button-component__radio-input-container"
  >
    <input
      className="monday-style-radio-button-component__radio-input-container__radio-input"
      defaultChecked={false}
      disabled={false}
      name="radios"
      type="radio"
      value="option1"
    />
    <span
      className="monday-style-radio-button-component__radio-input-container__radio-control"
    />
  </span>
  <span
    className="monday-style-radio-button-component__radio-label"
  >
    Option 1
  </span>
</label>
`;

exports[`RadioButton Tests Snapshot Tests renders correctly with empty props 1`] = `
<label
  className="monday-style-radio-button-component"
>
  <span
    className="monday-style-radio-button-component__radio-input-container"
  >
    <input
      className="monday-style-radio-button-component__radio-input-container__radio-input"
      defaultChecked={false}
      disabled={false}
      name=""
      type="radio"
      value=""
    />
    <span
      className="monday-style-radio-button-component__radio-input-container__radio-control"
    />
  </span>
  
</label>
`;
